# omapal

./: AGENTS.md  CHANGELOG.md  DEVPLAN.md  INITINFO.md  PLAN.md  README.md  mappings.py  omapal.py  pyproject.toml  validators.py  version.py  versioning.py  writers.py
tests/: test_cli.py  test_validators.py  test_versioning.py
