[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omapal"
version = "0.1.0"
description = "CLI to manage Omarchy theme palettes from colors.toml"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "omapal contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
omapal = "omapal:main"

[tool.setuptools]
py-modules = ["omapal", "mappings", "validators", "writers"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "tests",
]
