[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omapal"
dynamic = ["version"]
description = "CLI to manage Omarchy theme palettes from colors.toml"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "omapal contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
omapal = "omapal:main"
omapal-version = "versioning:main"

[tool.setuptools]
py-modules = ["omapal", "mappings", "validators", "writers", "version", "versioning"]

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "tests",
]
